--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
   display: flex;
   color: #fff;
   text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
+  /* box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5); */
 }
 
 .cover-container {
@@ -111,4 +111,8 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+span {
+  font-size: xx-small;
 }
