--- a/style.css
+++ b/style.css
@@ -70,8 +70,8 @@ body {
 }
 
 .nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
+  color: #04477B;
+  border-bottom-color: #04477B;
 }
 
 @media (min-width: 48em) {
