--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 a,
 a:focus,
 a:hover {
-  color: #fff;
+  color: #5DEAD2;
 }
 
 /* Custom default button */
@@ -32,8 +32,8 @@ body {
 body {
   display: -ms-flexbox;
   display: flex;
-  color: #fff;
-  text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
+  color: #04477B;
+  /* text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5); */
   /* box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5); */
 }
 
@@ -55,7 +55,7 @@ body {
 .nav-masthead .nav-link {
   padding: 0.25rem 0;
   font-weight: 700;
-  color: rgba(255, 255, 255, 0.5);
+  color: #04477B;
   background-color: transparent;
   border-bottom: 0.25rem solid transparent;
 }
@@ -98,7 +98,8 @@ body {
  * Footer
  */
 .mastfoot {
-  color: rgba(255, 255, 255, 0.5);
+  color: #04477B;
+  /* background-color: #333; */
 }
 
 .bg-image {
