--- a/style.css
+++ b/style.css
@@ -145,6 +145,18 @@ body {
   /* background-size: cover; */
 }
 
+.bg-image-40 {
+  /* image taken from Unsplash */
+  background-image: url("assets/images/bg-bada24_40%.svg");
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: left;
+  background-repeat: no-repeat;
+  /* background-size: cover; */
+}
+
 span {
   font-size: xx-small;
 }
@@ -159,9 +171,9 @@ span {
     display: block;
   }
 
-  .bg-image-2 {
+  .bg-image-40 {
     /* image taken from Unsplash */
-    background-image: url("assets/images/bg-bada24.svg");
+    background-image: url("assets/images/bg-bada24_40%.svg");
     /* Full height */
     height: 100%;
   
