--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ body {
 
 .bg-image-40 {
   /* image taken from Unsplash */
-  background-image: url("assets/images/bg-bada24_40%.svg");
+  background-image: url("assets/images/bg-bada24_40.svg");
   /* Full height */
   height: 100%;
 
@@ -173,7 +173,7 @@ span {
 
   .bg-image-40 {
     /* image taken from Unsplash */
-    background-image: url("assets/images/bg-bada24_40%.svg");
+    background-image: url("assets/images/bg-bada24_40.svg");
     /* Full height */
     height: 100%;
   
